use __DASHBOARD_PREFIX__

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
 
     <script>
-      const dashboardPrefix = '$DashboardPrefix$'
+      const dashboardPrefix = '__DASHBOARD_PREFIX__'
       if (!dashboardPrefix.startsWith('$')) {
         window.dashboardPrefix = '/' + dashboardPrefix
       } else {
