--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="x-dashboard-prefix" content="__DASHBOARD_PREFIX__">
+    <meta name="x-public-path-prefix" content="__PUBLIC_PATH_PREFIX__" />
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
