--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="x-public-path-prefix" content="__PUBLIC_PATH_PREFIX__" />
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="TiDB Dashboard" />
