--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -15,6 +15,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="dashboard_page_spinner"></div>
     <div id="root"></div>
-    <div id="__full_spa_content__"></div>
+    <div id="__full_spa_content__" style="background: white; border: 1px solid white;"></div>
   </body>
 </html>
