--- a/ui/public/iframe-test.html
+++ b/ui/public/iframe-test.html
@@ -9,9 +9,9 @@
       function changeApp(app, lang) {
         console.log('app:', app)
         const dashboardUrl = 'http://192.168.188.12:3000/dashboard#/'
-        const access_token =
-          'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE1OTE2NzEzMjMsIm9yaWdfaWF0IjoxNTkxNTg0OTIzLCJwIjoiQlZIZXFvWFhDemV4ZlZBMDFyN2lveG1VS2c1Z01LcXVxWjduRDhxdEJKNWVkSS9EbDdlTmFoVi81SHZTc3B2WlN2dklaQjEreHhWaGhvSXppMWNmWmNWR3hxeERtNEJucjZHb1JJTS9ldE1KNTFibkFFZC8ifQ.186FlB6K8AgwgW7qQfrIi--hvP3PMC35y-DJO_QpiGs'
-        const fullUrl = `${dashboardUrl}${app}?access_token=${access_token}&hideNav=true&lang=${
+        const token =
+          'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE1OTE3Njc4NzcsIm9yaWdfaWF0IjoxNTkxNjgxNDc3LCJwIjoiQUxteXFyTGZFd0ljR01UcU8wdVR1SlJhUFdVQWRBMGZrUjFEMTFvRFcrbWJ3ZWQ0dnFJVjFFT1V4WXlpekhUL0tmdzVqYi9sV1dtVDdvUWRYUWV3bnpXdndaTnZDaDJUM1o4RmR5dUdOeUdPMXFsTHZIeVoifQ.j0Gjx06VhZAGY1Q1vCoWpj-bw3VWbrVyMkRkYehV9V8'
+        const fullUrl = `${dashboardUrl}${app}?token=${token}&hideNav=true&lang=${
           lang || 'en'
         }`
         document.getElementById('dashboard').src = fullUrl
