--- a/ui/public/configPortal.html
+++ b/ui/public/configPortal.html
@@ -14,6 +14,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div style="padding: 10px;">
+        Permission denied
+      </div>
+    </div>
   </body>
 </html>
