remove real portal page

--- a/ui/tests/config-portal-test.html
+++ b/ui/tests/config-portal-test.html
@@ -9,7 +9,7 @@
       function changeApp(app) {
         console.log('app:', app)
         const dashboard = document.getElementById('dashboard')
-        dashboard.src = `http://localhost:3000/dashboard/configPortal.html#/${app}`
+        dashboard.src = `http://localhost:3000/dashboard/portal#/${app}`
       }
 
       window.onload = function () {
@@ -48,7 +48,7 @@
           id="dashboard"
           width="100%"
           height="100%"
-          src="http://localhost:3000/dashboard/configPortal.html#/statement"
+          src="http://localhost:3000/dashboard/portal#/statement"
         ></iframe>
       </div>
     </div>
