--- a/ui/tests/config-portal-test.html
+++ b/ui/tests/config-portal-test.html
@@ -49,7 +49,7 @@
           id="dashboard"
           width="100%"
           height="100%"
-          src="http://localhost:3000/dashboard/portal"
+          src="http://localhost:3000/dashboard/#/portal"
         ></iframe>
       </div>
     </div>
