address comments, rename 'app' to 'redirectPath'

--- a/ui/tests/config-portal-test.html
+++ b/ui/tests/config-portal-test.html
@@ -21,7 +21,7 @@
             token,
             lang: 'en',
             hideNav: true,
-            app: 'statement',
+            redirectPath: '/statement',
           },
           '*'
         )
