--- a/ui/public/diagnoseReport.html
+++ b/ui/public/diagnoseReport.html
@@ -10,6 +10,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="%PUBLIC_URL%/supportedBrowsers.js"></script>
+    <script src="%PUBLIC_URL%/checkBrowser.js"></script>
     <div id="root"></div>
   </body>
 </html>
