--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="%PUBLIC_URL%/unSupportedBrowsers.js"></script>
     <script src="%PUBLIC_URL%/supportedBrowsers.js"></script>
     <script src="%PUBLIC_URL%/checkBrowser.js"></script>
     <div id="dashboard_page_spinner"></div>
