--- a/ui/public/diagnoseReport.html
+++ b/ui/public/diagnoseReport.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script src="%PUBLIC_URL%/checkBrowser.js"></script>
+    <script src="%PUBLIC_URL%/compat.js"></script>
     <div id="root"></div>
   </body>
 </html>
