--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -91,7 +91,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script src="%PUBLIC_URL%/checkBrowser.js"></script>
+    <script src="%PUBLIC_URL%/compat.js"></script>
     <div id="dashboard_page_spinner"><div class="dot-flashing"></div></div>
     <div id="root"></div>
   </body>
